--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -34,6 +34,7 @@ macos-blade = [
     "objc2-metal",
 ]
 wayland = [
+    "bitflags",
     "blade-graphics",
     "blade-macros",
     "blade-util",
@@ -46,6 +47,7 @@ wayland = [
     "wayland-client",
     "wayland-cursor",
     "wayland-protocols",
+    "wayland-protocols-wlr",
     "wayland-protocols-plasma",
     "filedescriptor",
     "xkbcommon",
@@ -82,6 +84,7 @@ doctest = false
 anyhow.workspace = true
 async-task = "4.7"
 backtrace = { version = "0.3", optional = true }
+bitflags = { workspace = true, optional = true }
 blade-graphics = { workspace = true, optional = true }
 blade-macros = { workspace = true, optional = true }
 blade-util = { workspace = true, optional = true }
@@ -194,6 +197,9 @@ wayland-protocols = { version = "0.31.2", features = [
 ], optional = true }
 wayland-protocols-plasma = { version = "0.2.0", features = [
     "client",
+], optional = true }
+wayland-protocols-wlr = { version = "0.3.8", features = [
+    "client"
 ], optional = true }
 url = { workspace = true, optional = true }
 
